[Update 3.3.7]

Updated to version 1.19.4 of minecraft

Requires:
    - Geckolib 1.19.4:4.1.0
    - fabric loader 0.14.17
    - minecraft 1.19.4