@@ -7,17 +7,16 @@ plugins {
 
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
-
 archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
 def changelogFile = file('changelog.txt')
+def dataOutput = 'src/main/generated'
 
 repositories {
     maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
 }
-
 
 dependencies {
     constraints {
@@ -39,7 +38,6 @@ dependencies {
     modImplementation "software.bernie.geckolib:geckolib-fabric-${project.geckolib_version}"
 }
 
-def dataOutput = 'src/main/generated'
 
 loom {
     runs {
@@ -58,33 +56,20 @@ loom {
 sourceSets { main { resources { srcDirs += dataOutput } } }
 
 processResources {
-    inputs.property 'version', project.version
-    duplicatesStrategy = 'include'
+    inputs.property "version", project.version
 
-    from(sourceSets.main.resources.srcDirs) {
-        include 'fabric.mod.json'
-        expand 'version': project.version
-    }
-
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'fabric.mod.json'
+    filesMatching("fabric.mod.json") {
+        expand "version": project.version
     }
 }
 
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile).configureEach {
+    it.options.release = 17
     options.encoding = 'UTF-8'
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
-tasks.register('sourcesJar', Jar) {
-    dependsOn classes
-    classifier = 'sources'
-    from sourceSets.main.allSource
+java {
+    withSourcesJar()
 }
 
 jar {
@@ -149,23 +134,13 @@ beforeEvaluate {
     }
 }
 
-
-// configure the maven publication
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            // add all the jars that should be included when publishing to maven
-            artifact(remapJar) {
-                builtBy remapJar
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
+            from components.java
         }
     }
-    // select the repositories you want to publish to
+
     repositories {
-        // uncomment to publish to the local maven
-        mavenLocal()
     }
 }
