@@ -8,7 +8,7 @@ loader_version=0.14.17
 fabric_version=0.76.0+1.19.4
 geckolib_version=1.19.4:4.1.0
 # Mod Properties#######
-mod_version=3.3.8
+mod_version=3.3.9
 #######################
 modrinth=8oa0vS0A
 curseforge=340764
