@@ -3,24 +3,19 @@ package net.ethermod.blackether.blocks.gen.core;
 import net.ethermod.blackether.data.EthermodLootTableGenerator;
 import net.fabricmc.fabric.api.datagen.v1.provider.FabricBlockLootTableProvider;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.storage.loot.LootTable;
 
 import java.util.function.BiConsumer;
 
-public abstract class SingleBlockGenerator implements BlockGen {
+public abstract class EtherLootTableGenerator implements LootGenerator {
 
     protected LootTable.Builder builder;
-    protected final String blockName;
-    protected final Block block;
-
     protected final FabricBlockLootTableProvider lootTableGenerator;
 
-    public SingleBlockGenerator(final EthermodLootTableGenerator ltg,
-                                final String blockName,
-                                final Block b) {
-        this.block = b;
-        this.blockName = blockName;
+    public EtherLootTableGenerator(final EthermodLootTableGenerator ltg) {
+        if (ltg == null) {
+            throw new IllegalArgumentException("Loot table generator cannot be null.");
+        }
         this.lootTableGenerator = ltg;
     }
 
@@ -28,8 +23,9 @@ public abstract class SingleBlockGenerator implements BlockGen {
         this.builder = apply;
     }
 
+    @Override
     public abstract void generate();
 
-    public abstract void accept(final BiConsumer<ResourceLocation,
-            LootTable.Builder> resourceLocationBuilderBiConsumer);
+    @Override
+    public abstract void accept(BiConsumer<ResourceLocation, LootTable.Builder> resourceLocationBuilderBiConsumer);
 }
