@@ -5,7 +5,7 @@ import net.minecraft.world.level.storage.loot.LootTable;
 
 import java.util.function.BiConsumer;
 
-public interface BlockGen {
+public interface LootGenerator {
     void generate();
 
     void accept(final BiConsumer<ResourceLocation,
