@@ -3,26 +3,24 @@ package net.ethermod.blackether.blocks.gen.core;
 import net.ethermod.blackether.data.EthermodLootTableGenerator;
 import net.fabricmc.fabric.api.datagen.v1.provider.FabricBlockLootTableProvider;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.Item;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.storage.loot.LootTable;
 
 import java.util.function.BiConsumer;
 
-public abstract class BlockGenerator implements BlockGen {
+public abstract class SingleBlockLootGenerator implements LootGenerator {
 
     protected LootTable.Builder builder;
-
     protected final String blockName;
     protected final Block block;
-    protected final Item item;
+
     protected final FabricBlockLootTableProvider lootTableGenerator;
 
-    public BlockGenerator(final EthermodLootTableGenerator ltg, final String blockName,
-                          final Block b, final Item i) {
+    public SingleBlockLootGenerator(final EthermodLootTableGenerator ltg,
+                                    final String blockName,
+                                    final Block b) {
         this.block = b;
         this.blockName = blockName;
-        this.item = i;
         this.lootTableGenerator = ltg;
     }
 
@@ -34,5 +32,4 @@ public abstract class BlockGenerator implements BlockGen {
 
     public abstract void accept(final BiConsumer<ResourceLocation,
             LootTable.Builder> resourceLocationBuilderBiConsumer);
-
 }
