@@ -31,6 +31,7 @@ public class EthermodRecipeGenerator extends FabricRecipeProvider {
                         new NeutronBombRecipe(),
                         new OnyxDustRecipe(),
                         new OnyxArmorRecipe())
+                //.parallelStream() //For list sizes over 10 this could be beneficial.
                 .forEach(x -> x.build(exporter));
     }
 }
