@@ -1,6 +1,7 @@
 package net.ethermod.blackether.entity.misc;
 
 import net.ethermod.blackether.BlackEtherMod;
+import net.ethermod.blackether.utils.Naming;
 import net.minecraft.client.renderer.entity.EntityRenderer;
 import net.minecraft.client.renderer.entity.EntityRendererProvider;
 import net.minecraft.resources.ResourceLocation;
@@ -14,6 +15,6 @@ public class NeutronBombEntityRenderer extends EntityRenderer<NeutronBombEntity>
 
     @Override
     public @NotNull ResourceLocation getTextureLocation(@NotNull NeutronBombEntity entity) {
-        return new ResourceLocation(BlackEtherMod.MOD_ID, "textures/block/neutron_bomb_side.png");
+        return new ResourceLocation(BlackEtherMod.MOD_ID, Naming.NEUTRON_BOMB_TEX);
     }
 }
