@@ -1,114 +1,0 @@
-{
-  "pools": [
-    {
-      "rolls": {
-        "min": 1,
-        "max": 7
-      },
-      "bonus_rolls": {
-        "min": 0,
-        "max": 2
-      },
-      "entries": [
-        {
-          "type": "item",
-          "name": "minecraft:diamond",
-          "weight": 5,
-          "functions": [
-            {
-              "function": "set_count",
-              "count": {
-                "min": 1,
-                "max": 10
-              }
-            }
-          ]
-        },
-        {
-          "type": "item",
-          "name": "minecraft:obsidian",
-          "weight": 10,
-          "functions": [
-            {
-              "function": "set_count",
-              "count": {
-                "min": 1,
-                "max": 7
-              }
-            }
-          ]
-        },
-        {
-          "type": "item",
-          "name": "ethermod:onyx_axe",
-          "weight": 1,
-          "functions": [
-            {
-              "function": "set_count",
-              "count": 1
-            }
-          ]
-        },
-        {
-          "type": "item",
-          "name": "ethermod:block_of_ether",
-          "weight": 5,
-          "functions": [
-            {
-              "function": "set_count",
-              "count": 1
-            }
-          ]
-        },
-        {
-          "type": "item",
-          "name": "ethermod:onyx_sword",
-          "weight": 2,
-          "functions": [
-            {
-              "function": "set_count",
-              "count": 1
-            }
-          ]
-        },
-        {
-          "type": "item",
-          "name": "ethermod:onyx_pickaxe",
-          "weight": 1
-        },
-        {
-          "type": "item",
-          "name": "ethermod:onyx_dust",
-          "weight": 1,
-          "functions": [
-            {
-              "function": "set_count",
-              "count": 1
-            },
-            {
-              "function": "set_count",
-              "count": {
-                "min": 3,
-                "max": 6
-              }
-            }
-          ]
-        },
-        {
-          "type": "item",
-          "name": "ethermod:onyx_ore",
-          "weight": 10,
-          "functions": [
-            {
-              "function": "set_count",
-              "count": {
-                "min": 1,
-                "max": 10
-              }
-            }
-          ]
-        }
-      ]
-    }
-  ]
-}
