@@ -1,0 +1,33 @@
+{
+  "type": "minecraft:jigsaw",
+  "biomes": "#minecraft:has_structure/mineshaft",
+  "step": "surface_structures",
+  "spawn_overrides": {
+    "creature": {
+      "bounding_box": "full",
+      "spawns": [
+        {
+          "type": "ethermod:onyx_snake",
+          "weight": 100,
+          "minCount": 5,
+          "maxCount": 15
+        },
+        {
+          "type": "minecraft:bat",
+          "weight": 100,
+          "minCount": 15,
+          "maxCount": 25
+        }
+      ]
+    }
+  },
+  "terrain_adaptation": "beard_thin",
+  "start_pool": "ethermod:onyx_pyramid",
+  "size": 1,
+  "start_height": {
+    "absolute": 0
+  },
+  "project_start_to_heightmap": "WORLD_SURFACE_WG",
+  "max_distance_from_center": 80,
+  "use_expansion_hack": false
+}
